# OddsForge

./: .gitignore  README.md  render.yaml
backend/: .env  Cargo.toml  Dockerfile  fly.toml
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/cli/: mod.rs
backend/src/db/: mod.rs  seed.rs
backend/src/ml/: backtest.rs  feature_store.rs  gradient_boosted.rs  kaggle_ingest.rs  meta_learner.rs  mod.rs  monte_carlo.rs  poisson_model.rs  rapm.rs
backend/src/models/: mod.rs
backend/src/services/: data_fetcher.rs  elo_calculator.rs  mod.rs  nba_players_fetcher.rs  nba_predictor.rs  nba_stats_fetcher.rs  odds_fetcher.rs  predictor.rs
backend/src/utils/: mod.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AlgorithmBreakdown.tsx  BouncingBall.tsx  GameCard.tsx  LineupPanel.tsx
frontend/src/pages/: Dashboard.tsx  DatasetBuilder.tsx  EdgeFinder.tsx  HowItWorks.tsx  MLAnalytics.tsx  TeamProfile.tsx
frontend/src/services/: api.ts
