[package]
name = "oddsforge-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1.39", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Config
dotenv = "0.15"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math/Statistics
nalgebra = "0.33"
statrs = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CSV export
csv = "1.1"